add new api, remove deployment files
