# docs/swagger.yaml
@@ -1,5 +1,45 @@
 basePath: /api/v1
 definitions:
+  answer.paramPostRespondentWithAnswers:
+    properties:
+      age:
+        type: integer
+      answers:
+        items:
+          properties:
+            association1:
+              type: string
+            association2:
+              type: string
+            association3:
+              type: string
+            questionId:
+              type: integer
+            timeSpend:
+              type: integer
+          type: object
+        type: array
+      countryOfBirth:
+        type: string
+      countryOfResidence:
+        type: string
+      education:
+        type: string
+      email:
+        type: string
+      endTime:
+        type: string
+      ethnicity:
+        type: string
+      gender:
+        type: string
+      isNative:
+        type: string
+      languagesSpoken:
+        type: string
+      startTime:
+        type: string
+    type: object
   answer.paramPostSingleAnswer:
     properties:
       association1:
@@ -113,28 +153,6 @@ info:
   version: "1.0"
 paths:
   /answer:
-    get:
-      parameters:
-      - description: default=10000
-        in: query
-        name: limit
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            items:
-              $ref: '#/definitions/model.Answer'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/apiv1.ErrorResponse'
-      summary: Get all answers
-      tags:
-      - Answer
     post:
       parameters:
       - description: answer with 3 associations
@@ -157,7 +175,52 @@ paths:
       summary: Post an answer
       tags:
       - Answer
-  /question:
+  /answers:
+    get:
+      parameters:
+      - description: default=10000
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Answer'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apiv1.ErrorResponse'
+      summary: Get all answers
+      tags:
+      - Answer
+    post:
+      parameters:
+      - description: the information
+        in: body
+        name: respondent
+        required: true
+        schema:
+          $ref: '#/definitions/answer.paramPostRespondentWithAnswers'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Respondent'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apiv1.ErrorResponse'
+      summary: Post respondent information and answers together
+      tags:
+      - Answer
+  /questions:
     get:
       description: Get a list of questions
       parameters:
@@ -182,28 +245,6 @@ paths:
       tags:
       - Questions
   /respondent:
-    get:
-      parameters:
-      - description: default=10000
-        in: query
-        name: limit
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/model.Respondent'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/apiv1.ErrorResponse'
-      summary: Get all respondents
-      tags:
-      - Respondent
     post:
       parameters:
       - description: respondent information
@@ -224,6 +265,29 @@ paths:
           schema:
             $ref: '#/definitions/apiv1.ErrorResponse'
       summary: Post a respondent information
+      tags:
+      - Respondent
+  /respondents:
+    get:
+      parameters:
+      - description: default=10000
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Respondent'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/apiv1.ErrorResponse'
+      summary: Get all respondents
       tags:
       - Respondent
 swagger: "2.0"
